--- a/layout.html
+++ b/layout.html
@@ -242,6 +242,22 @@ body {
     padding: 0.45rem;
   }
 }
+.botao-roteiro {
+  background-color: var(--cor-laranja);
+  color: white;
+  padding: 0.6rem 1.2rem;
+  border: none;
+  border-radius: 6px;
+  cursor: pointer;
+  font-size: 1rem;
+  font-weight: 600;
+  font-family: 'Segoe UI','Roboto','Open Sans',sans-serif;
+  transition: background-color 0.3s;
+}
+
+.botao-roteiro:hover {
+  background-color: var(--cor-cinzento);
+}
 
 </style>
 
@@ -451,9 +467,10 @@ body {
     Não sabes o que fazer? Clica no botão para gerar sozinho um roteiro de um dia para ti!
   </div>
 
-  <button onclick="gerarRoteiro()" style="padding: 0.6rem 1.2rem; background-color: var(--cor-laranja); color: white; border: none; border-radius: 6px; cursor: pointer; font-size: 1rem;">
-    Gerar Roteiro Aleatório
-  </button>
+ <button onclick="gerarRoteiro()" class="botao-roteiro">
+  Gerar Roteiro Aleatório
+</button>
+
 
   <div id="roteiro-container" style="display: none; margin-top: 2rem;">
 
