--- a/capital.html
+++ b/capital.html
@@ -414,63 +414,58 @@ body {
 
   
    <div class="card" style="border: 1px solid #ddd; border-radius: 8px; padding: 1rem; background-color: var(--cor-secundaria);">
-  <img src="levadas.png" style="width: 100%; border-radius: 6px;">
-  <div class="card-title">Levada das 25 Fontes</div>
+  <img src="estatuacr7.png" style="width: 100%; border-radius: 6px;">
+  <div class="card-title">Estátua CR7</div>
 
-  <input type="checkbox" id="toggle-25fontes" class="accordion-checkbox" hidden>
-  <label for="toggle-25fontes" class="accordion-toggle">Ver detalhes</label>
+  <input type="checkbox" id="toggle-cr7" class="accordion-checkbox" hidden>
+  <label for="toggle-cr7" class="accordion-toggle">Ver detalhes</label>
 
   <div class="accordion-content">
     <div style="margin-top: 1rem; display: flex; flex-direction: column; gap: 1rem;">
 
       <div><strong style="color: var(--cor-terciaria);">Destaques</strong>
         <ul>
-          <li>Cascatas e lagoas naturais</li>
-          <li>Caminhada icónica da Madeira</li>
-          <li>Natureza pura e verdejante</li>
+          <li>Estátua icónica do Cristiano Ronaldo</li>
+          <li>Local popular para fotografias</li>
+          <li>Junto ao Museu CR7</li>
         </ul>
       </div>
 
       <div><strong style="color: var(--cor-terciaria);">Descrição</strong>
-        <p>Uma das levadas mais famosas da ilha, ideal para quem procura aventura e contacto com a natureza.</p>
+        <p>Um dos pontos mais visitados do Funchal, dedicado ao maior símbolo do futebol madeirense.</p>
       </div>
 
       <div><strong style="color: var(--cor-terciaria);">Itinerário</strong>
-        <p>Rabaçal → Levada → Lagoa das 25 Fontes → Regresso.</p>
+        <p>Chegada → Fotos → Museu CR7 (opcional) → Regresso.</p>
       </div>
 
       <div><strong style="color: var(--cor-terciaria);">Incluído no Serviço</strong>
         <ul>
-          <li>Guia de montanha</li>
-          <li>Transporte</li>
-          <li>Seguro</li>
+          <li>Acesso livre</li>
+          <li>Zona pedonal</li>
         </ul>
       </div>
 
       <div><strong style="color: var(--cor-terciaria);">Informações</strong>
         <ul>
-          <li>Duração: 3h30</li>
-          <li>Distância: 4,6 km</li>
-          <li>Nível: Moderado</li>
+          <li>Duração: 20 min</li>
+          <li>Localização: Funchal</li>
         </ul>
       </div>
 
       <div><strong style="color: var(--cor-terciaria);">Outras Sugestões</strong>
         <ul>
-          <li>Pico Arieiro</li>
-          <li>Mercado Lavradores</li>
+          <li>Zona Velha</li>
+          <li>Miradouro das Neves</li>
+          <li>Miradouro Pico dos Barcelos</li>
         </ul>
       </div>
 
       <div><strong style="color: var(--cor-terciaria); font-size: 1.1rem;">Preço: Gratuito</strong></div>
 
       <div style="display: flex; gap: 1rem;">
-  <div style="display: flex; gap: 1rem;">
-  <button class="botao" onclick="adicionarCarrinho('Pico do Areeiro')">Adicionar ao Carrinho</button>
-  <button class="botao" onclick="adicionarFavoritos('Pico do Areeiro')">Adicionar aos Favoritos</button>
-</div>
-
-
+        <button class="botao" onclick="adicionarCarrinho('Estátua CR7')">Adicionar ao Carrinho</button>
+        <button class="botao" onclick="adicionarFavoritos('Estátua CR7')">Adicionar aos Favoritos</button>
       </div>
 
     </div>
@@ -478,64 +473,60 @@ body {
 </div>
 
 
-<div class="card" style="border: 1px solid #ddd; border-radius: 8px; padding: 1rem; background-color: var(--cor-secundaria);">
-  <img src="picodoariero.png" style="width: 100%; border-radius: 6px;">
-  <div class="card-title">Pico do Areeiro</div>
 
-  <input type="checkbox" id="toggle-arieiro" class="accordion-checkbox" hidden>
-  <label for="toggle-arieiro" class="accordion-toggle">Ver detalhes</label>
+<div class="card" style="border: 1px solid #ddd; border-radius: 8px; padding: 1rem; background-color: var(--cor-secundaria);">
+  <img src="miradourodasneves.png" style="width: 100%; border-radius: 6px;">
+  <div class="card-title">Miradouro das Neves</div>
+
+  <input type="checkbox" id="toggle-neves" class="accordion-checkbox" hidden>
+  <label for="toggle-neves" class="accordion-toggle">Ver detalhes</label>
 
   <div class="accordion-content">
     <div style="margin-top: 1rem; display: flex; flex-direction: column; gap: 1rem;">
 
       <div><strong style="color: var(--cor-terciaria);">Destaques</strong>
         <ul>
-          <li>Vista panorâmica única</li>
-          <li>Local icónico da Madeira</li>
-          <li>Perfeito para fotografias</li>
+          <li>Vista panorâmica sobre o Funchal</li>
+          <li>Local ideal para fotos</li>
+          <li>Ambiente tranquilo</li>
         </ul>
       </div>
 
       <div><strong style="color: var(--cor-terciaria);">Descrição</strong>
-        <p>Um dos pontos mais visitados da ilha, ideal para quem procura natureza, paisagens e tranquilidade.</p>
+        <p>Um dos miradouros mais bonitos da Madeira, com vista completa sobre a baía do Funchal.</p>
       </div>
 
       <div><strong style="color: var(--cor-terciaria);">Itinerário</strong>
-        <p>Chegada ao local → Miradouro → Caminhada leve → Regresso.</p>
+        <p>Chegada → Miradouro → Sessão de fotos → Regresso.</p>
       </div>
 
       <div><strong style="color: var(--cor-terciaria);">Incluído no Serviço</strong>
         <ul>
-          <li>Guia local</li>
-          <li>Transporte</li>
-          <li>Seguro</li>
+          <li>Acesso livre</li>
+          <li>Zona de observação</li>
         </ul>
       </div>
 
       <div><strong style="color: var(--cor-terciaria);">Informações</strong>
         <ul>
-          <li>Duração: 2h</li>
-          <li>Recomendado: calçado confortável</li>
-          <li>Acessível a famílias</li>
+          <li>Duração: 30 min</li>
+          <li>Localização: Funchal</li>
         </ul>
       </div>
 
       <div><strong style="color: var(--cor-terciaria);">Outras Sugestões</strong>
         <ul>
-          <li>Cabo Girão</li>
-          <li>Levada 25 Fontes</li>
+          <li>Estátua CR7</li>
+          <li>Zona Velha</li>
+          <li>Miradouro Pico dos Barcelos</li>
         </ul>
       </div>
 
       <div><strong style="color: var(--cor-terciaria); font-size: 1.1rem;">Preço: Gratuito</strong></div>
 
       <div style="display: flex; gap: 1rem;">
-    <div style="display: flex; gap: 1rem;">
-  <button class="botao" onclick="adicionarCarrinho('Pico do Areeiro')">Adicionar ao Carrinho</button>
-  <button class="botao" onclick="adicionarFavoritos('Pico do Areeiro')">Adicionar aos Favoritos</button>
-</div>
-
-
+        <button class="botao" onclick="adicionarCarrinho('Miradouro das Neves')">Adicionar ao Carrinho</button>
+        <button class="botao" onclick="adicionarFavoritos('Miradouro das Neves')">Adicionar aos Favoritos</button>
       </div>
 
     </div>
@@ -546,129 +537,123 @@ body {
 
     
   <div class="card" style="border: 1px solid #ddd; border-radius: 8px; padding: 1rem; background-color: var(--cor-secundaria);">
-  <img src="cabogirao.png" style="width: 100%; border-radius: 6px;">
-  <div class="card-title">Cabo Girão</div>
+  <img src="zonavelha.png" style="width: 100%; border-radius: 6px;">
+  <div class="card-title">Zona Velha</div>
 
-  <input type="checkbox" id="toggle-girao" class="accordion-checkbox" hidden>
-  <label for="toggle-girao" class="accordion-toggle">Ver detalhes</label>
-
-  <div class="accordion-content">
-    <div style="margin-top: 1rem; display: flex; flex-direction: column; gap: 1rem;">
-
-      <div><strong style="color: var(--cor-terciaria);">Destaques</strong>
-        <ul>
-          <li>Plataforma suspensa em vidro</li>
-          <li>Vista sobre Funchal e mar</li>
-          <li>Adrenalina e paisagem</li>
-        </ul>
-      </div>
-
-      <div><strong style="color: var(--cor-terciaria);">Descrição</strong>
-        <p>Miradouro famoso com chão em vidro, ideal para quem gosta de emoção e vistas amplas.</p>
-      </div>
-
-      <div><strong style="color: var(--cor-terciaria);">Itinerário</strong>
-        <p>Chegada → Plataforma → Tempo livre → Regresso.</p>
-      </div>
-
-      <div><strong style="color: var(--cor-terciaria);">Incluído no Serviço</strong>
-        <ul>
-          <li>Transporte</li>
-          <li>Entrada</li>
-        </ul>
-      </div>
-
-      <div><strong style="color: var(--cor-terciaria);">Informações</strong>
-        <ul>
-          <li>Duração: 1h30</li>
-          <li>Altura: 580m</li>
-          <li>Vista sobre falésias</li>
-        </ul>
-      </div>
-
-      <div><strong style="color: var(--cor-terciaria);">Outras Sugestões</strong>
-        <ul>
-          <li>Fajã dos Padres</li>
-          <li>Miradouro do Cabo</li>
-        </ul>
-      </div>
-
-      <div><strong style="color: var(--cor-terciaria); font-size: 1.1rem;">Preço: Gratuito</strong></div>
-
-      <div style="display: flex; gap: 1rem;">
-      <div style="display: flex; gap: 1rem;">
-  <button class="botao" onclick="adicionarCarrinho('Pico do Areeiro')">Adicionar ao Carrinho</button>
-  <button class="botao" onclick="adicionarFavoritos('Pico do Areeiro')">Adicionar aos Favoritos</button>
-</div>
-
-
-      </div>
-
-    </div>
-  </div>
-</div>
-<div class="card" style="border: 1px solid #ddd; border-radius: 8px; padding: 1rem; background-color: var(--cor-secundaria);">
-  <img src="mercadolavradores.png" style="width: 100%; border-radius: 6px;">
-  <div class="card-title">Mercado dos Lavradores</div>
-
-  <input type="checkbox" id="toggle-mercado" class="accordion-checkbox" hidden>
-  <label for="toggle-mercado" class="accordion-toggle">Ver detalhes</label>
+  <input type="checkbox" id="toggle-zonavelha" class="accordion-checkbox" hidden>
+  <label for="toggle-zonavelha" class="accordion-toggle">Ver detalhes</label>
 
   <div class="accordion-content">
     <div style="margin-top: 1rem; display: flex; flex-direction: column; gap: 1rem;">
 
       <div><strong style="color: var(--cor-terciaria);">Destaques</strong>
         <ul>
-          <li>Mercado tradicional madeirense</li>
-          <li>Frutas exóticas e flores</li>
-          <li>Ambiente cultural e local</li>
+          <li>Ruas históricas</li>
+          <li>Portas pintadas</li>
+          <li>Ambiente cultural e artístico</li>
         </ul>
       </div>
 
       <div><strong style="color: var(--cor-terciaria);">Descrição</strong>
-        <p>Um dos locais mais emblemáticos do Funchal, perfeito para conhecer produtos regionais.</p>
+        <p>A zona mais antiga do Funchal, cheia de arte urbana, restaurantes e história.</p>
       </div>
 
       <div><strong style="color: var(--cor-terciaria);">Itinerário</strong>
-        <p>Entrada → Zona das frutas → Zona do peixe → Artesanato.</p>
+        <p>Passeio pelas ruas → Portas pintadas → Zona cultural → Regresso.</p>
       </div>
 
       <div><strong style="color: var(--cor-terciaria);">Incluído no Serviço</strong>
         <ul>
-          <li>Guia local</li>
-          <li>Degustação de frutas</li>
+          <li>Acesso livre</li>
+          <li>Zona pedonal</li>
         </ul>
       </div>
 
       <div><strong style="color: var(--cor-terciaria);">Informações</strong>
         <ul>
-          <li>Duração: 1h</li>
+          <li>Duração: Livre</li>
           <li>Localização: Funchal</li>
-          <li>Ideal para famílias</li>
         </ul>
       </div>
 
       <div><strong style="color: var(--cor-terciaria);">Outras Sugestões</strong>
         <ul>
-          <li>Pico Arieiro</li>
-          <li>Cabo Girão</li>
+          <li>Estátua CR7</li>
+          <li>Miradouro das Neves</li>
+          <li>Miradouro Pico dos Barcelos</li>
         </ul>
       </div>
 
       <div><strong style="color: var(--cor-terciaria); font-size: 1.1rem;">Preço: Gratuito</strong></div>
 
       <div style="display: flex; gap: 1rem;">
-      <div style="display: flex; gap: 1rem;">
-  <button class="botao" onclick="adicionarCarrinho('Pico do Areeiro')">Adicionar ao Carrinho</button>
-  <button class="botao" onclick="adicionarFavoritos('Pico do Areeiro')">Adicionar aos Favoritos</button>
-</div>
-
-
+        <button class="botao" onclick="adicionarCarrinho('Zona Velha')">Adicionar ao Carrinho</button>
+        <button class="botao" onclick="adicionarFavoritos('Zona Velha')">Adicionar aos Favoritos</button>
       </div>
 
     </div>
   </div>
 </div>
+
+<div class="card" style="border: 1px solid #ddd; border-radius: 8px; padding: 1rem; background-color: var(--cor-secundaria);">
+  <img src="picobarcelos.png" style="width: 100%; border-radius: 6px;">
+  <div class="card-title">Miradouro Pico dos Barcelos</div>
+
+  <input type="checkbox" id="toggle-barcelos" class="accordion-checkbox" hidden>
+  <label for="toggle-barcelos" class="accordion-toggle">Ver detalhes</label>
+
+  <div class="accordion-content">
+    <div style="margin-top: 1rem; display: flex; flex-direction: column; gap: 1rem;">
+
+      <div><strong style="color: var(--cor-terciaria);">Destaques</strong>
+        <ul>
+          <li>Vista panorâmica sobre o Funchal</li>
+          <li>Miradouro renovado</li>
+          <li>Espaço amplo e tranquilo</li>
+        </ul>
+      </div>
+
+      <div><strong style="color: var(--cor-terciaria);">Descrição</strong>
+        <p>Um dos miradouros mais conhecidos da Madeira, com vista privilegiada sobre toda a cidade.</p>
+      </div>
+
+      <div><strong style="color: var(--cor-terciaria);">Itinerário</strong>
+        <p>Chegada → Miradouro → Fotos → Regresso.</p>
+      </div>
+
+      <div><strong style="color: var(--cor-terciaria);">Incluído no Serviço</strong>
+        <ul>
+          <li>Acesso livre</li>
+          <li>Zona de observação</li>
+        </ul>
+      </div>
+
+      <div><strong style="color: var(--cor-terciaria);">Informações</strong>
+        <ul>
+          <li>Duração: 30 min</li>
+          <li>Localização: Funchal</li>
+        </ul>
+      </div>
+
+      <div><strong style="color: var(--cor-terciaria);">Outras Sugestões</strong>
+        <ul>
+          <li>Estátua CR7</li>
+          <li>Zona Velha</li>
+          <li>Miradouro das Neves</li>
+        </ul>
+      </div>
+
+      <div><strong style="color: var(--cor-terciaria); font-size: 1.1rem;">Preço: Gratuito</strong></div>
+
+      <div style="display: flex; gap: 1rem;">
+        <button class="botao" onclick="adicionarCarrinho('Miradouro Pico dos Barcelos')">Adicionar ao Carrinho</button>
+        <button class="botao" onclick="adicionarFavoritos('Miradouro Pico dos Barcelos')">Adicionar aos Favoritos</button>
+      </div>
+
+    </div>
+  </div>
+</div>
+
 
 
   </div>
