--- a/porto_santo.html
+++ b/porto_santo.html
@@ -412,65 +412,59 @@ body {
 
   <div style="display: grid; grid-template-columns: repeat(4, 1fr); gap: 1.5rem; margin-bottom: 2rem;">
 
-  
-   <div class="card" style="border: 1px solid #ddd; border-radius: 8px; padding: 1rem; background-color: var(--cor-secundaria);">
-  <img src="levadas.png" style="width: 100%; border-radius: 6px;">
-  <div class="card-title">Levada das 25 Fontes</div>
+  <div class="card" style="border: 1px solid #ddd; border-radius: 8px; padding: 1rem; background-color: var(--cor-secundaria);">
+  <img src="centrohistoricos.png" style="width: 100%; border-radius: 6px;">
+  <div class="card-title">Centro Histórico do Porto Santo</div>
 
-  <input type="checkbox" id="toggle-25fontes" class="accordion-checkbox" hidden>
-  <label for="toggle-25fontes" class="accordion-toggle">Ver detalhes</label>
+  <input type="checkbox" id="toggle-centrops" class="accordion-checkbox" hidden>
+  <label for="toggle-centrops" class="accordion-toggle">Ver detalhes</label>
 
   <div class="accordion-content">
     <div style="margin-top: 1rem; display: flex; flex-direction: column; gap: 1rem;">
 
       <div><strong style="color: var(--cor-terciaria);">Destaques</strong>
         <ul>
-          <li>Cascatas e lagoas naturais</li>
-          <li>Caminhada icónica da Madeira</li>
-          <li>Natureza pura e verdejante</li>
+          <li>Ruas tradicionais</li>
+          <li>Ambiente local e histórico</li>
+          <li>Arquitetura típica</li>
         </ul>
       </div>
 
       <div><strong style="color: var(--cor-terciaria);">Descrição</strong>
-        <p>Uma das levadas mais famosas da ilha, ideal para quem procura aventura e contacto com a natureza.</p>
+        <p>Zona histórica com ruas antigas, comércio local e pontos culturais importantes.</p>
       </div>
 
       <div><strong style="color: var(--cor-terciaria);">Itinerário</strong>
-        <p>Rabaçal → Levada → Lagoa das 25 Fontes → Regresso.</p>
+        <p>Passeio pelas ruas → Comércio local → Zona cultural → Regresso.</p>
       </div>
 
       <div><strong style="color: var(--cor-terciaria);">Incluído no Serviço</strong>
         <ul>
-          <li>Guia de montanha</li>
-          <li>Transporte</li>
-          <li>Seguro</li>
+          <li>Acesso livre</li>
+          <li>Zona pedonal</li>
         </ul>
       </div>
 
       <div><strong style="color: var(--cor-terciaria);">Informações</strong>
         <ul>
-          <li>Duração: 3h30</li>
-          <li>Distância: 4,6 km</li>
-          <li>Nível: Moderado</li>
+          <li>Duração: Livre</li>
+          <li>Localização: Vila Baleira</li>
         </ul>
       </div>
 
       <div><strong style="color: var(--cor-terciaria);">Outras Sugestões</strong>
         <ul>
-          <li>Pico Arieiro</li>
-          <li>Mercado Lavradores</li>
+          <li>Pico Ana Ferreira</li>
+          <li>Miradouro da Portela</li>
+          <li>Praia do Porto Santo</li>
         </ul>
       </div>
 
       <div><strong style="color: var(--cor-terciaria); font-size: 1.1rem;">Preço: Gratuito</strong></div>
 
       <div style="display: flex; gap: 1rem;">
-  <div style="display: flex; gap: 1rem;">
-  <button class="botao" onclick="adicionarCarrinho('Pico do Areeiro')">Adicionar ao Carrinho</button>
-  <button class="botao" onclick="adicionarFavoritos('Pico do Areeiro')">Adicionar aos Favoritos</button>
-</div>
-
-
+        <button class="botao" onclick="adicionarCarrinho('Centro Histórico do Porto Santo')">Adicionar ao Carrinho</button>
+        <button class="botao" onclick="adicionarFavoritos('Centro Histórico do Porto Santo')">Adicionar aos Favoritos</button>
       </div>
 
     </div>
@@ -479,196 +473,186 @@ body {
 
 
 <div class="card" style="border: 1px solid #ddd; border-radius: 8px; padding: 1rem; background-color: var(--cor-secundaria);">
-  <img src="picodoariero.png" style="width: 100%; border-radius: 6px;">
-  <div class="card-title">Pico do Areeiro</div>
+  <img src="praiadoportosanto.png" style="width: 100%; border-radius: 6px;">
+  <div class="card-title">Praia do Porto Santo</div>
 
-  <input type="checkbox" id="toggle-arieiro" class="accordion-checkbox" hidden>
-  <label for="toggle-arieiro" class="accordion-toggle">Ver detalhes</label>
+  <input type="checkbox" id="toggle-praiaps" class="accordion-checkbox" hidden>
+  <label for="toggle-praiaps" class="accordion-toggle">Ver detalhes</label>
 
   <div class="accordion-content">
     <div style="margin-top: 1rem; display: flex; flex-direction: column; gap: 1rem;">
 
       <div><strong style="color: var(--cor-terciaria);">Destaques</strong>
         <ul>
-          <li>Vista panorâmica única</li>
-          <li>Local icónico da Madeira</li>
-          <li>Perfeito para fotografias</li>
+          <li>Areia dourada terapêutica</li>
+          <li>Águas calmas e cristalinas</li>
+          <li>Praia com 9 km de extensão</li>
         </ul>
       </div>
 
       <div><strong style="color: var(--cor-terciaria);">Descrição</strong>
-        <p>Um dos pontos mais visitados da ilha, ideal para quem procura natureza, paisagens e tranquilidade.</p>
+        <p>A praia mais famosa do Porto Santo, perfeita para relaxar e aproveitar o sol.</p>
       </div>
 
       <div><strong style="color: var(--cor-terciaria);">Itinerário</strong>
-        <p>Chegada ao local → Miradouro → Caminhada leve → Regresso.</p>
+        <p>Passeio pela praia → Zona de banhos → Relaxar → Regresso.</p>
       </div>
 
       <div><strong style="color: var(--cor-terciaria);">Incluído no Serviço</strong>
         <ul>
-          <li>Guia local</li>
-          <li>Transporte</li>
-          <li>Seguro</li>
+          <li>Acesso livre</li>
+          <li>Zona de banhos</li>
         </ul>
       </div>
 
       <div><strong style="color: var(--cor-terciaria);">Informações</strong>
         <ul>
-          <li>Duração: 2h</li>
-          <li>Recomendado: calçado confortável</li>
-          <li>Acessível a famílias</li>
+          <li>Duração: Livre</li>
+          <li>Localização: Porto Santo</li>
         </ul>
       </div>
 
       <div><strong style="color: var(--cor-terciaria);">Outras Sugestões</strong>
         <ul>
-          <li>Cabo Girão</li>
-          <li>Levada 25 Fontes</li>
+          <li>Miradouro da Portela</li>
+          <li>Pico Ana Ferreira</li>
+          <li>Centro Histórico do Porto Santo</li>
         </ul>
       </div>
 
       <div><strong style="color: var(--cor-terciaria); font-size: 1.1rem;">Preço: Gratuito</strong></div>
 
       <div style="display: flex; gap: 1rem;">
-    <div style="display: flex; gap: 1rem;">
-  <button class="botao" onclick="adicionarCarrinho('Pico do Areeiro')">Adicionar ao Carrinho</button>
-  <button class="botao" onclick="adicionarFavoritos('Pico do Areeiro')">Adicionar aos Favoritos</button>
-</div>
-
-
+        <button class="botao" onclick="adicionarCarrinho('Praia do Porto Santo')">Adicionar ao Carrinho</button>
+        <button class="botao" onclick="adicionarFavoritos('Praia do Porto Santo')">Adicionar aos Favoritos</button>
       </div>
 
     </div>
   </div>
 </div>
+
 
 
 
     
   <div class="card" style="border: 1px solid #ddd; border-radius: 8px; padding: 1rem; background-color: var(--cor-secundaria);">
-  <img src="cabogirao.png" style="width: 100%; border-radius: 6px;">
-  <div class="card-title">Cabo Girão</div>
+  <img src="miradouroportela.png" style="width: 100%; border-radius: 6px;">
+  <div class="card-title">Miradouro da Portela</div>
 
-  <input type="checkbox" id="toggle-girao" class="accordion-checkbox" hidden>
-  <label for="toggle-girao" class="accordion-toggle">Ver detalhes</label>
+  <input type="checkbox" id="toggle-portela" class="accordion-checkbox" hidden>
+  <label for="toggle-portela" class="accordion-toggle">Ver detalhes</label>
 
   <div class="accordion-content">
     <div style="margin-top: 1rem; display: flex; flex-direction: column; gap: 1rem;">
 
       <div><strong style="color: var(--cor-terciaria);">Destaques</strong>
         <ul>
-          <li>Plataforma suspensa em vidro</li>
-          <li>Vista sobre Funchal e mar</li>
-          <li>Adrenalina e paisagem</li>
+          <li>Vista panorâmica sobre a ilha</li>
+          <li>Moinhos de vento tradicionais</li>
+          <li>Local ideal para fotografias</li>
         </ul>
       </div>
 
       <div><strong style="color: var(--cor-terciaria);">Descrição</strong>
-        <p>Miradouro famoso com chão em vidro, ideal para quem gosta de emoção e vistas amplas.</p>
+        <p>O miradouro mais famoso do Porto Santo, com vistas amplas sobre a praia e montanhas.</p>
       </div>
 
       <div><strong style="color: var(--cor-terciaria);">Itinerário</strong>
-        <p>Chegada → Plataforma → Tempo livre → Regresso.</p>
+        <p>Chegada → Miradouro → Sessão de fotos → Regresso.</p>
       </div>
 
       <div><strong style="color: var(--cor-terciaria);">Incluído no Serviço</strong>
         <ul>
-          <li>Transporte</li>
-          <li>Entrada</li>
+          <li>Acesso livre</li>
+          <li>Zona de observação</li>
         </ul>
       </div>
 
       <div><strong style="color: var(--cor-terciaria);">Informações</strong>
         <ul>
-          <li>Duração: 1h30</li>
-          <li>Altura: 580m</li>
-          <li>Vista sobre falésias</li>
+          <li>Duração: 30 min</li>
+          <li>Localização: Portela</li>
         </ul>
       </div>
 
       <div><strong style="color: var(--cor-terciaria);">Outras Sugestões</strong>
         <ul>
-          <li>Fajã dos Padres</li>
-          <li>Miradouro do Cabo</li>
+          <li>Pico Ana Ferreira</li>
+          <li>Praia do Porto Santo</li>
+          <li>Centro Histórico do Porto Santo</li>
         </ul>
       </div>
 
       <div><strong style="color: var(--cor-terciaria); font-size: 1.1rem;">Preço: Gratuito</strong></div>
 
       <div style="display: flex; gap: 1rem;">
-      <div style="display: flex; gap: 1rem;">
-  <button class="botao" onclick="adicionarCarrinho('Pico do Areeiro')">Adicionar ao Carrinho</button>
-  <button class="botao" onclick="adicionarFavoritos('Pico do Areeiro')">Adicionar aos Favoritos</button>
-</div>
-
-
+        <button class="botao" onclick="adicionarCarrinho('Miradouro da Portela')">Adicionar ao Carrinho</button>
+        <button class="botao" onclick="adicionarFavoritos('Miradouro da Portela')">Adicionar aos Favoritos</button>
       </div>
 
     </div>
   </div>
 </div>
+
 <div class="card" style="border: 1px solid #ddd; border-radius: 8px; padding: 1rem; background-color: var(--cor-secundaria);">
-  <img src="mercadolavradores.png" style="width: 100%; border-radius: 6px;">
-  <div class="card-title">Mercado dos Lavradores</div>
+  <img src="picoanaferreira.png" style="width: 100%; border-radius: 6px;">
+  <div class="card-title">Pico Ana Ferreira</div>
 
-  <input type="checkbox" id="toggle-mercado" class="accordion-checkbox" hidden>
-  <label for="toggle-mercado" class="accordion-toggle">Ver detalhes</label>
+  <input type="checkbox" id="toggle-anaferreira" class="accordion-checkbox" hidden>
+  <label for="toggle-anaferreira" class="accordion-toggle">Ver detalhes</label>
 
   <div class="accordion-content">
     <div style="margin-top: 1rem; display: flex; flex-direction: column; gap: 1rem;">
 
       <div><strong style="color: var(--cor-terciaria);">Destaques</strong>
         <ul>
-          <li>Mercado tradicional madeirense</li>
-          <li>Frutas exóticas e flores</li>
-          <li>Ambiente cultural e local</li>
+          <li>Formações rochosas únicas</li>
+          <li>Colunas basálticas naturais</li>
+          <li>Vista panorâmica</li>
         </ul>
       </div>
 
       <div><strong style="color: var(--cor-terciaria);">Descrição</strong>
-        <p>Um dos locais mais emblemáticos do Funchal, perfeito para conhecer produtos regionais.</p>
+        <p>Um dos pontos geológicos mais interessantes da ilha, conhecido pelas suas colunas prismáticas.</p>
       </div>
 
       <div><strong style="color: var(--cor-terciaria);">Itinerário</strong>
-        <p>Entrada → Zona das frutas → Zona do peixe → Artesanato.</p>
+        <p>Chegada → Caminhada leve → Observação → Regresso.</p>
       </div>
 
       <div><strong style="color: var(--cor-terciaria);">Incluído no Serviço</strong>
         <ul>
-          <li>Guia local</li>
-          <li>Degustação de frutas</li>
+          <li>Acesso livre</li>
+          <li>Zona de observação</li>
         </ul>
       </div>
 
       <div><strong style="color: var(--cor-terciaria);">Informações</strong>
         <ul>
-          <li>Duração: 1h</li>
-          <li>Localização: Funchal</li>
-          <li>Ideal para famílias</li>
+          <li>Duração: 45 min</li>
+          <li>Localização: Porto Santo</li>
         </ul>
       </div>
 
       <div><strong style="color: var(--cor-terciaria);">Outras Sugestões</strong>
         <ul>
-          <li>Pico Arieiro</li>
-          <li>Cabo Girão</li>
+          <li>Miradouro da Portela</li>
+          <li>Praia do Porto Santo</li>
+          <li>Centro Histórico do Porto Santo</li>
         </ul>
       </div>
 
       <div><strong style="color: var(--cor-terciaria); font-size: 1.1rem;">Preço: Gratuito</strong></div>
 
       <div style="display: flex; gap: 1rem;">
-      <div style="display: flex; gap: 1rem;">
-  <button class="botao" onclick="adicionarCarrinho('Pico do Areeiro')">Adicionar ao Carrinho</button>
-  <button class="botao" onclick="adicionarFavoritos('Pico do Areeiro')">Adicionar aos Favoritos</button>
-</div>
-
-
+        <button class="botao" onclick="adicionarCarrinho('Pico Ana Ferreira')">Adicionar ao Carrinho</button>
+        <button class="botao" onclick="adicionarFavoritos('Pico Ana Ferreira')">Adicionar aos Favoritos</button>
       </div>
 
     </div>
   </div>
 </div>
+
 
 
   </div>
