--- a/norte.html
+++ b/norte.html
@@ -404,271 +404,269 @@ body {
   </h2>
 
   <div style="display: flex; justify-content: flex-end; margin-bottom: 1rem;">
-    <input type="text" style="padding: 0.5rem; border: 1px solid #ccc; border-radius: 4px; width: 220px;">
-    <button class="botao-guardar" style="margin-left: 0.5rem;">Pesquisar</button>
+    <input
+      type="text"
+      style="padding: 0.5rem; border: 1px solid #ccc; border-radius: 4px; width: 220px;"
+    >
+    <button class="botao-guardar" style="margin-left: 0.5rem;">
+      Pesquisar
+    </button>
   </div>
 
-  <h3 style="color: var(--cor-terciaria); margin-bottom: 1rem;">Principais Atrações</h3>
+  <h3 style="color: var(--cor-terciaria); margin-bottom: 1rem;">
+    Principais Atrações
+  </h3>
 
-  <div style="display: grid; grid-template-columns: repeat(4, 1fr); gap: 1.5rem; margin-bottom: 2rem;">
+  <div
+    style="display: grid; grid-template-columns: repeat(4, 1fr); gap: 1.5rem; margin-bottom: 2rem;"
+  >
 
-  
-   <div class="card" style="border: 1px solid #ddd; border-radius: 8px; padding: 1rem; background-color: var(--cor-secundaria);">
-  <img src="levadas.png" style="width: 100%; border-radius: 6px;">
-  <div class="card-title">Levada das 25 Fontes</div>
 
-  <input type="checkbox" id="toggle-25fontes" class="accordion-checkbox" hidden>
-  <label for="toggle-25fontes" class="accordion-toggle">Ver detalhes</label>
+    <div class="card" style="border: 1px solid #ddd; border-radius: 8px; padding: 1rem; background-color: var(--cor-secundaria);">
+  <img src="casadesantana.png" style="width: 100%; border-radius: 6px;">
+  <div class="card-title">Casas de Santana</div>
+
+  <input type="checkbox" id="toggle-santana" class="accordion-checkbox" hidden>
+  <label for="toggle-santana" class="accordion-toggle">Ver detalhes</label>
 
   <div class="accordion-content">
     <div style="margin-top: 1rem; display: flex; flex-direction: column; gap: 1rem;">
 
       <div><strong style="color: var(--cor-terciaria);">Destaques</strong>
         <ul>
-          <li>Cascatas e lagoas naturais</li>
-          <li>Caminhada icónica da Madeira</li>
-          <li>Natureza pura e verdejante</li>
+          <li>Casas típicas triangulares</li>
+          <li>Arquitetura tradicional</li>
+          <li>Ambiente cultural</li>
         </ul>
       </div>
 
       <div><strong style="color: var(--cor-terciaria);">Descrição</strong>
-        <p>Uma das levadas mais famosas da ilha, ideal para quem procura aventura e contacto com a natureza.</p>
+        <p>As casas de colmo de Santana são um dos símbolos mais marcantes da Madeira.</p>
       </div>
 
       <div><strong style="color: var(--cor-terciaria);">Itinerário</strong>
-        <p>Rabaçal → Levada → Lagoa das 25 Fontes → Regresso.</p>
-      </div>
-
-      <div><strong style="color: var(--cor-terciaria);">Incluído no Serviço</strong>
-        <ul>
-          <li>Guia de montanha</li>
-          <li>Transporte</li>
-          <li>Seguro</li>
-        </ul>
-      </div>
-
-      <div><strong style="color: var(--cor-terciaria);">Informações</strong>
-        <ul>
-          <li>Duração: 3h30</li>
-          <li>Distância: 4,6 km</li>
-          <li>Nível: Moderado</li>
-        </ul>
-      </div>
-
-      <div><strong style="color: var(--cor-terciaria);">Outras Sugestões</strong>
-        <ul>
-          <li>Pico Arieiro</li>
-          <li>Mercado Lavradores</li>
-        </ul>
-      </div>
-
-      <div><strong style="color: var(--cor-terciaria); font-size: 1.1rem;">Preço: Gratuito</strong></div>
-
-      <div style="display: flex; gap: 1rem;">
-  <div style="display: flex; gap: 1rem;">
-  <button class="botao" onclick="adicionarCarrinho('Pico do Areeiro')">Adicionar ao Carrinho</button>
-  <button class="botao" onclick="adicionarFavoritos('Pico do Areeiro')">Adicionar aos Favoritos</button>
-</div>
-
-
-      </div>
-
-    </div>
-  </div>
-</div>
-
-
-<div class="card" style="border: 1px solid #ddd; border-radius: 8px; padding: 1rem; background-color: var(--cor-secundaria);">
-  <img src="picodoariero.png" style="width: 100%; border-radius: 6px;">
-  <div class="card-title">Pico do Areeiro</div>
-
-  <input type="checkbox" id="toggle-arieiro" class="accordion-checkbox" hidden>
-  <label for="toggle-arieiro" class="accordion-toggle">Ver detalhes</label>
-
-  <div class="accordion-content">
-    <div style="margin-top: 1rem; display: flex; flex-direction: column; gap: 1rem;">
-
-      <div><strong style="color: var(--cor-terciaria);">Destaques</strong>
-        <ul>
-          <li>Vista panorâmica única</li>
-          <li>Local icónico da Madeira</li>
-          <li>Perfeito para fotografias</li>
-        </ul>
-      </div>
-
-      <div><strong style="color: var(--cor-terciaria);">Descrição</strong>
-        <p>Um dos pontos mais visitados da ilha, ideal para quem procura natureza, paisagens e tranquilidade.</p>
-      </div>
-
-      <div><strong style="color: var(--cor-terciaria);">Itinerário</strong>
-        <p>Chegada ao local → Miradouro → Caminhada leve → Regresso.</p>
+        <p>Chegada → Visita → Artesanato → Regresso.</p>
       </div>
 
       <div><strong style="color: var(--cor-terciaria);">Incluído no Serviço</strong>
         <ul>
           <li>Guia local</li>
           <li>Transporte</li>
-          <li>Seguro</li>
-        </ul>
-      </div>
-
-      <div><strong style="color: var(--cor-terciaria);">Informações</strong>
-        <ul>
-          <li>Duração: 2h</li>
-          <li>Recomendado: calçado confortável</li>
-          <li>Acessível a famílias</li>
-        </ul>
-      </div>
-
-      <div><strong style="color: var(--cor-terciaria);">Outras Sugestões</strong>
-        <ul>
-          <li>Cabo Girão</li>
-          <li>Levada 25 Fontes</li>
-        </ul>
-      </div>
-
-      <div><strong style="color: var(--cor-terciaria); font-size: 1.1rem;">Preço: Gratuito</strong></div>
-
-      <div style="display: flex; gap: 1rem;">
-    <div style="display: flex; gap: 1rem;">
-  <button class="botao" onclick="adicionarCarrinho('Pico do Areeiro')">Adicionar ao Carrinho</button>
-  <button class="botao" onclick="adicionarFavoritos('Pico do Areeiro')">Adicionar aos Favoritos</button>
-</div>
-
-
-      </div>
-
-    </div>
-  </div>
-</div>
-
-
-
-    
-  <div class="card" style="border: 1px solid #ddd; border-radius: 8px; padding: 1rem; background-color: var(--cor-secundaria);">
-  <img src="cabogirao.png" style="width: 100%; border-radius: 6px;">
-  <div class="card-title">Cabo Girão</div>
-
-  <input type="checkbox" id="toggle-girao" class="accordion-checkbox" hidden>
-  <label for="toggle-girao" class="accordion-toggle">Ver detalhes</label>
-
-  <div class="accordion-content">
-    <div style="margin-top: 1rem; display: flex; flex-direction: column; gap: 1rem;">
-
-      <div><strong style="color: var(--cor-terciaria);">Destaques</strong>
-        <ul>
-          <li>Plataforma suspensa em vidro</li>
-          <li>Vista sobre Funchal e mar</li>
-          <li>Adrenalina e paisagem</li>
-        </ul>
-      </div>
-
-      <div><strong style="color: var(--cor-terciaria);">Descrição</strong>
-        <p>Miradouro famoso com chão em vidro, ideal para quem gosta de emoção e vistas amplas.</p>
-      </div>
-
-      <div><strong style="color: var(--cor-terciaria);">Itinerário</strong>
-        <p>Chegada → Plataforma → Tempo livre → Regresso.</p>
-      </div>
-
-      <div><strong style="color: var(--cor-terciaria);">Incluído no Serviço</strong>
-        <ul>
-          <li>Transporte</li>
-          <li>Entrada</li>
         </ul>
       </div>
 
       <div><strong style="color: var(--cor-terciaria);">Informações</strong>
         <ul>
           <li>Duração: 1h30</li>
-          <li>Altura: 580m</li>
-          <li>Vista sobre falésias</li>
+          <li>Localização: Santana</li>
         </ul>
       </div>
 
       <div><strong style="color: var(--cor-terciaria);">Outras Sugestões</strong>
         <ul>
-          <li>Fajã dos Padres</li>
-          <li>Miradouro do Cabo</li>
+          <li>Parque Temático da Madeira</li>
+          <li>Miradouro do Guindaste</li>
+          <li>Praia do Seixal</li>
         </ul>
       </div>
 
       <div><strong style="color: var(--cor-terciaria); font-size: 1.1rem;">Preço: Gratuito</strong></div>
 
       <div style="display: flex; gap: 1rem;">
-      <div style="display: flex; gap: 1rem;">
-  <button class="botao" onclick="adicionarCarrinho('Pico do Areeiro')">Adicionar ao Carrinho</button>
-  <button class="botao" onclick="adicionarFavoritos('Pico do Areeiro')">Adicionar aos Favoritos</button>
-</div>
-
-
+        <button class="botao" onclick="adicionarCarrinho('Casas de Santana')">Adicionar ao Carrinho</button>
+        <button class="botao" onclick="adicionarFavoritos('Casas de Santana')">Adicionar aos Favoritos</button>
       </div>
 
     </div>
   </div>
 </div>
-<div class="card" style="border: 1px solid #ddd; border-radius: 8px; padding: 1rem; background-color: var(--cor-secundaria);">
-  <img src="mercadolavradores.png" style="width: 100%; border-radius: 6px;">
-  <div class="card-title">Mercado dos Lavradores</div>
 
-  <input type="checkbox" id="toggle-mercado" class="accordion-checkbox" hidden>
-  <label for="toggle-mercado" class="accordion-toggle">Ver detalhes</label>
+
+
+ 
+    <div class="card" style="border: 1px solid #ddd; border-radius: 8px; padding: 1rem; background-color: var(--cor-secundaria);">
+  <img src="miradouroduguindaste.png" style="width: 100%; border-radius: 6px;">
+  <div class="card-title">Miradouro do Guindaste</div>
+
+  <input type="checkbox" id="toggle-guindaste" class="accordion-checkbox" hidden>
+  <label for="toggle-guindaste" class="accordion-toggle">Ver detalhes</label>
 
   <div class="accordion-content">
     <div style="margin-top: 1rem; display: flex; flex-direction: column; gap: 1rem;">
 
       <div><strong style="color: var(--cor-terciaria);">Destaques</strong>
         <ul>
-          <li>Mercado tradicional madeirense</li>
-          <li>Frutas exóticas e flores</li>
-          <li>Ambiente cultural e local</li>
+          <li>Vista panorâmica sobre o oceano</li>
+          <li>Miradouro suspenso</li>
+          <li>Local ideal para fotos</li>
         </ul>
       </div>
 
       <div><strong style="color: var(--cor-terciaria);">Descrição</strong>
-        <p>Um dos locais mais emblemáticos do Funchal, perfeito para conhecer produtos regionais.</p>
+        <p>Um dos miradouros mais impressionantes da Madeira, com vista aberta para o Atlântico.</p>
       </div>
 
       <div><strong style="color: var(--cor-terciaria);">Itinerário</strong>
-        <p>Entrada → Zona das frutas → Zona do peixe → Artesanato.</p>
+        <p>Chegada → Miradouro → Fotos → Regresso.</p>
       </div>
 
       <div><strong style="color: var(--cor-terciaria);">Incluído no Serviço</strong>
         <ul>
+          <li>Transporte</li>
           <li>Guia local</li>
-          <li>Degustação de frutas</li>
         </ul>
       </div>
 
       <div><strong style="color: var(--cor-terciaria);">Informações</strong>
         <ul>
           <li>Duração: 1h</li>
-          <li>Localização: Funchal</li>
-          <li>Ideal para famílias</li>
+          <li>Localização: Faial</li>
         </ul>
       </div>
 
       <div><strong style="color: var(--cor-terciaria);">Outras Sugestões</strong>
         <ul>
-          <li>Pico Arieiro</li>
-          <li>Cabo Girão</li>
+          <li>Praia do Seixal</li>
+          <li>Casas de Santana</li>
+          <li>Parque Temático da Madeira</li>
         </ul>
       </div>
 
       <div><strong style="color: var(--cor-terciaria); font-size: 1.1rem;">Preço: Gratuito</strong></div>
 
       <div style="display: flex; gap: 1rem;">
-      <div style="display: flex; gap: 1rem;">
-  <button class="botao" onclick="adicionarCarrinho('Pico do Areeiro')">Adicionar ao Carrinho</button>
-  <button class="botao" onclick="adicionarFavoritos('Pico do Areeiro')">Adicionar aos Favoritos</button>
-</div>
-
-
+        <button class="botao" onclick="adicionarCarrinho('Miradouro do Guindaste')">Adicionar ao Carrinho</button>
+        <button class="botao" onclick="adicionarFavoritos('Miradouro do Guindaste')">Adicionar aos Favoritos</button>
       </div>
 
     </div>
   </div>
 </div>
+
+
+
+
+    
+ <div class="card" style="border: 1px solid #ddd; border-radius: 8px; padding: 1rem; background-color: var(--cor-secundaria);">
+  <img src="praiaseixal.png" style="width: 100%; border-radius: 6px;">
+  <div class="card-title">Praia do Seixal</div>
+
+  <input type="checkbox" id="toggle-seixal" class="accordion-checkbox" hidden>
+  <label for="toggle-seixal" class="accordion-toggle">Ver detalhes</label>
+
+  <div class="accordion-content">
+    <div style="margin-top: 1rem; display: flex; flex-direction: column; gap: 1rem;">
+
+      <div><strong style="color: var(--cor-terciaria);">Destaques</strong>
+        <ul>
+          <li>Praia de areia preta vulcânica</li>
+          <li>Vista para o Penha d’Águia</li>
+          <li>Águas calmas e cenário único</li>
+        </ul>
+      </div>
+
+      <div><strong style="color: var(--cor-terciaria);">Descrição</strong>
+        <p>Uma das praias mais bonitas da Madeira, conhecida pela sua areia preta e paisagem dramática.</p>
+      </div>
+
+      <div><strong style="color: var(--cor-terciaria);">Itinerário</strong>
+        <p>Chegada → Praia → Zona de banhos → Regresso.</p>
+      </div>
+
+      <div><strong style="color: var(--cor-terciaria);">Incluído no Serviço</strong>
+        <ul>
+          <li>Transporte</li>
+          <li>Seguro</li>
+        </ul>
+      </div>
+
+      <div><strong style="color: var(--cor-terciaria);">Informações</strong>
+        <ul>
+          <li>Duração: 3h</li>
+          <li>Localização: Seixal</li>
+          <li>Atividade relaxante</li>
+        </ul>
+      </div>
+
+      <div><strong style="color: var(--cor-terciaria);">Outras Sugestões</strong>
+        <ul>
+          <li>Miradouro do Guindaste</li>
+          <li>Casas de Santana</li>
+          <li>Parque Temático da Madeira</li>
+        </ul>
+      </div>
+
+      <div><strong style="color: var(--cor-terciaria); font-size: 1.1rem;">Preço: Gratuito</strong></div>
+
+      <div style="display: flex; gap: 1rem;">
+        <button class="botao" onclick="adicionarCarrinho('Praia do Seixal')">Adicionar ao Carrinho</button>
+        <button class="botao" onclick="adicionarFavoritos('Praia do Seixal')">Adicionar aos Favoritos</button>
+      </div>
+
+    </div>
+  </div>
+</div>
+
+
+<div class="card" style="border: 1px solid #ddd; border-radius: 8px; padding: 1rem; background-color: var(--cor-secundaria);">
+  <img src="parquetematico.png" style="width: 100%; border-radius: 6px;">
+  <div class="card-title">Parque Temático da Madeira</div>
+
+  <input type="checkbox" id="toggle-parque" class="accordion-checkbox" hidden>
+  <label for="toggle-parque" class="accordion-toggle">Ver detalhes</label>
+
+  <div class="accordion-content">
+    <div style="margin-top: 1rem; display: flex; flex-direction: column; gap: 1rem;">
+
+      <div><strong style="color: var(--cor-terciaria);">Destaques</strong>
+        <ul>
+          <li>Espaço cultural e educativo</li>
+          <li>Atividades interativas</li>
+          <li>Ideal para famílias</li>
+        </ul>
+      </div>
+
+      <div><strong style="color: var(--cor-terciaria);">Descrição</strong>
+        <p>Parque dedicado à história e tradições da Madeira, com várias áreas temáticas.</p>
+      </div>
+
+      <div><strong style="color: var(--cor-terciaria);">Itinerário</strong>
+        <p>Entrada → Áreas temáticas → Atividades → Regresso.</p>
+      </div>
+
+      <div><strong style="color: var(--cor-terciaria);">Incluído no Serviço</strong>
+        <ul>
+          <li>Entrada</li>
+          <li>Guia local</li>
+        </ul>
+      </div>
+
+      <div><strong style="color: var(--cor-terciaria);">Informações</strong>
+        <ul>
+          <li>Duração: 2h</li>
+          <li>Localização: Santana</li>
+        </ul>
+      </div>
+
+      <div><strong style="color: var(--cor-terciaria);">Outras Sugestões</strong>
+        <ul>
+          <li>Casas de Santana</li>
+          <li>Miradouro do Guindaste</li>
+          <li>Praia do Seixal</li>
+        </ul>
+      </div>
+
+      <div><strong style="color: var(--cor-terciaria); font-size: 1.1rem;">Preço: Gratuito</strong></div>
+
+      <div style="display: flex; gap: 1rem;">
+        <button class="botao" onclick="adicionarCarrinho('Parque Temático da Madeira')">Adicionar ao Carrinho</button>
+        <button class="botao" onclick="adicionarFavoritos('Parque Temático da Madeira')">Adicionar aos Favoritos</button>
+      </div>
+
+    </div>
+  </div>
+</div>
+
 
 
   </div>
