--- a/porto_santo.htm
+++ b/porto_santo.htm
@@ -479,134 +479,127 @@ body {
 
 
 <div class="card" style="border: 1px solid #ddd; border-radius: 8px; padding: 1rem; background-color: var(--cor-secundaria);">
-  <img src="picodoariero.png" style="width: 100%; border-radius: 6px;">
-  <div class="card-title">Pico do Areeiro</div>
+  <img src="praiadoportosanto.png" style="width: 100%; border-radius: 6px;">
+  <div class="card-title">Praia do Porto Santo</div>
 
-  <input type="checkbox" id="toggle-arieiro" class="accordion-checkbox" hidden>
-  <label for="toggle-arieiro" class="accordion-toggle">Ver detalhes</label>
+  <input type="checkbox" id="toggle-praiaps" class="accordion-checkbox" hidden>
+  <label for="toggle-praiaps" class="accordion-toggle">Ver detalhes</label>
 
   <div class="accordion-content">
     <div style="margin-top: 1rem; display: flex; flex-direction: column; gap: 1rem;">
 
       <div><strong style="color: var(--cor-terciaria);">Destaques</strong>
         <ul>
-          <li>Vista panorâmica única</li>
-          <li>Local icónico da Madeira</li>
-          <li>Perfeito para fotografias</li>
+          <li>Areia dourada terapêutica</li>
+          <li>Águas calmas e cristalinas</li>
+          <li>Praia com 9 km de extensão</li>
         </ul>
       </div>
 
       <div><strong style="color: var(--cor-terciaria);">Descrição</strong>
-        <p>Um dos pontos mais visitados da ilha, ideal para quem procura natureza, paisagens e tranquilidade.</p>
+        <p>A praia mais famosa do Porto Santo, perfeita para relaxar e aproveitar o sol.</p>
       </div>
 
       <div><strong style="color: var(--cor-terciaria);">Itinerário</strong>
-        <p>Chegada ao local → Miradouro → Caminhada leve → Regresso.</p>
+        <p>Passeio pela praia → Zona de banhos → Relaxar → Regresso.</p>
       </div>
 
       <div><strong style="color: var(--cor-terciaria);">Incluído no Serviço</strong>
         <ul>
-          <li>Guia local</li>
-          <li>Transporte</li>
-          <li>Seguro</li>
+          <li>Acesso livre</li>
+          <li>Zona de banhos</li>
         </ul>
       </div>
 
       <div><strong style="color: var(--cor-terciaria);">Informações</strong>
         <ul>
-          <li>Duração: 2h</li>
-          <li>Recomendado: calçado confortável</li>
-          <li>Acessível a famílias</li>
+          <li>Duração: Livre</li>
+          <li>Localização: Porto Santo</li>
         </ul>
       </div>
 
       <div><strong style="color: var(--cor-terciaria);">Outras Sugestões</strong>
         <ul>
-          <li>Cabo Girão</li>
-          <li>Levada 25 Fontes</li>
+          <li>Miradouro da Portela</li>
+          <li>Pico Ana Ferreira</li>
+          <li>Centro Histórico do Porto Santo</li>
         </ul>
       </div>
 
       <div><strong style="color: var(--cor-terciaria); font-size: 1.1rem;">Preço: Gratuito</strong></div>
 
       <div style="display: flex; gap: 1rem;">
-    <div style="display: flex; gap: 1rem;">
-  <button class="botao" onclick="adicionarCarrinho('Pico do Areeiro')">Adicionar ao Carrinho</button>
-  <button class="botao" onclick="adicionarFavoritos('Pico do Areeiro')">Adicionar aos Favoritos</button>
-</div>
-
-
+        <button class="botao" onclick="adicionarCarrinho('Praia do Porto Santo')">Adicionar ao Carrinho</button>
+        <button class="botao" onclick="adicionarFavoritos('Praia do Porto Santo')">Adicionar aos Favoritos</button>
       </div>
 
     </div>
   </div>
 </div>
+
 
 
 
     
   <div class="card" style="border: 1px solid #ddd; border-radius: 8px; padding: 1rem; background-color: var(--cor-secundaria);">
-  <img src="cabogirao.png" style="width: 100%; border-radius: 6px;">
-  <div class="card-title">Cabo Girão</div>
+  <img src="miradouroportela.png" style="width: 100%; border-radius: 6px;">
+  <div class="card-title">Miradouro da Portela</div>
 
-  <input type="checkbox" id="toggle-girao" class="accordion-checkbox" hidden>
-  <label for="toggle-girao" class="accordion-toggle">Ver detalhes</label>
+  <input type="checkbox" id="toggle-portela" class="accordion-checkbox" hidden>
+  <label for="toggle-portela" class="accordion-toggle">Ver detalhes</label>
 
   <div class="accordion-content">
     <div style="margin-top: 1rem; display: flex; flex-direction: column; gap: 1rem;">
 
       <div><strong style="color: var(--cor-terciaria);">Destaques</strong>
         <ul>
-          <li>Plataforma suspensa em vidro</li>
-          <li>Vista sobre Funchal e mar</li>
-          <li>Adrenalina e paisagem</li>
+          <li>Vista panorâmica sobre a ilha</li>
+          <li>Moinhos de vento tradicionais</li>
+          <li>Local ideal para fotografias</li>
         </ul>
       </div>
 
       <div><strong style="color: var(--cor-terciaria);">Descrição</strong>
-        <p>Miradouro famoso com chão em vidro, ideal para quem gosta de emoção e vistas amplas.</p>
+        <p>O miradouro mais famoso do Porto Santo, com vistas amplas sobre a praia e montanhas.</p>
       </div>
 
       <div><strong style="color: var(--cor-terciaria);">Itinerário</strong>
-        <p>Chegada → Plataforma → Tempo livre → Regresso.</p>
+        <p>Chegada → Miradouro → Sessão de fotos → Regresso.</p>
       </div>
 
       <div><strong style="color: var(--cor-terciaria);">Incluído no Serviço</strong>
         <ul>
-          <li>Transporte</li>
-          <li>Entrada</li>
+          <li>Acesso livre</li>
+          <li>Zona de observação</li>
         </ul>
       </div>
 
       <div><strong style="color: var(--cor-terciaria);">Informações</strong>
         <ul>
-          <li>Duração: 1h30</li>
-          <li>Altura: 580m</li>
-          <li>Vista sobre falésias</li>
+          <li>Duração: 30 min</li>
+          <li>Localização: Portela</li>
         </ul>
       </div>
 
       <div><strong style="color: var(--cor-terciaria);">Outras Sugestões</strong>
         <ul>
-          <li>Fajã dos Padres</li>
-          <li>Miradouro do Cabo</li>
+          <li>Pico Ana Ferreira</li>
+          <li>Praia do Porto Santo</li>
+          <li>Centro Histórico do Porto Santo</li>
         </ul>
       </div>
 
       <div><strong style="color: var(--cor-terciaria); font-size: 1.1rem;">Preço: Gratuito</strong></div>
 
       <div style="display: flex; gap: 1rem;">
-      <div style="display: flex; gap: 1rem;">
-  <button class="botao" onclick="adicionarCarrinho('Pico do Areeiro')">Adicionar ao Carrinho</button>
-  <button class="botao" onclick="adicionarFavoritos('Pico do Areeiro')">Adicionar aos Favoritos</button>
-</div>
-
-
+        <button class="botao" onclick="adicionarCarrinho('Miradouro da Portela')">Adicionar ao Carrinho</button>
+        <button class="botao" onclick="adicionarFavoritos('Miradouro da Portela')">Adicionar aos Favoritos</button>
       </div>
 
     </div>
   </div>
 </div>
+
 <div class="card" style="border: 1px solid #ddd; border-radius: 8px; padding: 1rem; background-color: var(--cor-secundaria);">
   <img src="mercadolavradores.png" style="width: 100%; border-radius: 6px;">
   <div class="card-title">Mercado dos Lavradores</div>
@@ -650,8 +643,8 @@ body {
 
       <div><strong style="color: var(--cor-terciaria);">Outras Sugestões</strong>
         <ul>
-          <li>Pico Arieiro</li>
-          <li>Cabo Girão</li>
+          <li>Zona Velha</li>
+          <li>Teleférico</li>
         </ul>
       </div>
 
