--- a/sul.html
+++ b/sul.html
@@ -404,73 +404,77 @@ body {
   </h2>
 
   <div style="display: flex; justify-content: flex-end; margin-bottom: 1rem;">
-    <input type="text" style="padding: 0.5rem; border: 1px solid #ccc; border-radius: 4px; width: 220px;">
-    <button class="botao-guardar" style="margin-left: 0.5rem;">Pesquisar</button>
+    <input
+      type="text"
+      style="padding: 0.5rem; border: 1px solid #ccc; border-radius: 4px; width: 220px;"
+    >
+    <button class="botao-guardar" style="margin-left: 0.5rem;">
+      Pesquisar
+    </button>
   </div>
 
-  <h3 style="color: var(--cor-terciaria); margin-bottom: 1rem;">Principais Atrações</h3>
+  <h3 style="color: var(--cor-terciaria); margin-bottom: 1rem;">
+    Principais Atrações
+  </h3>
 
-  <div style="display: grid; grid-template-columns: repeat(4, 1fr); gap: 1.5rem; margin-bottom: 2rem;">
+  <div
+    style="display: grid; grid-template-columns: repeat(4, 1fr); gap: 1.5rem; margin-bottom: 2rem;"
+  >
 
-  
-   <div class="card" style="border: 1px solid #ddd; border-radius: 8px; padding: 1rem; background-color: var(--cor-secundaria);">
-  <img src="levadas.png" style="width: 100%; border-radius: 6px;">
-  <div class="card-title">Levada das 25 Fontes</div>
 
-  <input type="checkbox" id="toggle-25fontes" class="accordion-checkbox" hidden>
-  <label for="toggle-25fontes" class="accordion-toggle">Ver detalhes</label>
+    <div class="card" style="border: 1px solid #ddd; border-radius: 8px; padding: 1rem; background-color: var(--cor-secundaria);">
+  <img src="baiacamaradelobos.png" style="width: 100%; border-radius: 6px;">
+  <div class="card-title">Baía de Câmara de Lobos</div>
+
+  <input type="checkbox" id="toggle-camaralobos" class="accordion-checkbox" hidden>
+  <label for="toggle-camaralobos" class="accordion-toggle">Ver detalhes</label>
 
   <div class="accordion-content">
     <div style="margin-top: 1rem; display: flex; flex-direction: column; gap: 1rem;">
 
       <div><strong style="color: var(--cor-terciaria);">Destaques</strong>
         <ul>
-          <li>Cascatas e lagoas naturais</li>
-          <li>Caminhada icónica da Madeira</li>
-          <li>Natureza pura e verdejante</li>
+          <li>Vila piscatória tradicional</li>
+          <li>Baía colorida com barcos típicos</li>
+          <li>Local histórico apreciado por Churchill</li>
         </ul>
       </div>
 
       <div><strong style="color: var(--cor-terciaria);">Descrição</strong>
-        <p>Uma das levadas mais famosas da ilha, ideal para quem procura aventura e contacto com a natureza.</p>
+        <p>Uma das vilas mais emblemáticas da Madeira, conhecida pela sua baía pitoresca e ambiente local.</p>
       </div>
 
       <div><strong style="color: var(--cor-terciaria);">Itinerário</strong>
-        <p>Rabaçal → Levada → Lagoa das 25 Fontes → Regresso.</p>
+        <p>Chegada → Passeio pela baía → Zona histórica → Regresso.</p>
       </div>
 
       <div><strong style="color: var(--cor-terciaria);">Incluído no Serviço</strong>
         <ul>
-          <li>Guia de montanha</li>
+          <li>Guia local</li>
           <li>Transporte</li>
-          <li>Seguro</li>
         </ul>
       </div>
 
       <div><strong style="color: var(--cor-terciaria);">Informações</strong>
         <ul>
-          <li>Duração: 3h30</li>
-          <li>Distância: 4,6 km</li>
-          <li>Nível: Moderado</li>
+          <li>Duração: 1h30</li>
+          <li>Localização: Câmara de Lobos</li>
         </ul>
       </div>
 
       <div><strong style="color: var(--cor-terciaria);">Outras Sugestões</strong>
         <ul>
-          <li>Pico Arieiro</li>
-          <li>Mercado Lavradores</li>
+          <li>Cabo Girão</li>
+          <li>Cais da Ponta do Sol</li>
+          <li>Paul do Mar</li>
         </ul>
       </div>
 
       <div><strong style="color: var(--cor-terciaria); font-size: 1.1rem;">Preço: Gratuito</strong></div>
 
       <div style="display: flex; gap: 1rem;">
-  <div style="display: flex; gap: 1rem;">
-  <button class="botao" onclick="adicionarCarrinho('Pico do Areeiro')">Adicionar ao Carrinho</button>
-  <button class="botao" onclick="adicionarFavoritos('Pico do Areeiro')">Adicionar aos Favoritos</button>
-</div>
-
-
+        <button class="botao" onclick="adicionarCarrinho('Baía de Câmara de Lobos')">Adicionar ao Carrinho</button>
+        <button class="botao" onclick="adicionarFavoritos('Baía de Câmara de Lobos')">Adicionar aos Favoritos</button>
       </div>
 
     </div>
@@ -478,35 +482,101 @@ body {
 </div>
 
 
-<div class="card" style="border: 1px solid #ddd; border-radius: 8px; padding: 1rem; background-color: var(--cor-secundaria);">
-  <img src="picodoariero.png" style="width: 100%; border-radius: 6px;">
-  <div class="card-title">Pico do Areeiro</div>
 
-  <input type="checkbox" id="toggle-arieiro" class="accordion-checkbox" hidden>
-  <label for="toggle-arieiro" class="accordion-toggle">Ver detalhes</label>
+
+ 
+    <div class="card" style="border: 1px solid #ddd; border-radius: 8px; padding: 1rem; background-color: var(--cor-secundaria);">
+  <img src="miradouroribeirabrava.png" style="width: 100%; border-radius: 6px;">
+  <div class="card-title">Miradouro da Ribeira Brava</div>
+
+  <input type="checkbox" id="toggle-ribeirabrava" class="accordion-checkbox" hidden>
+  <label for="toggle-ribeirabrava" class="accordion-toggle">Ver detalhes</label>
 
   <div class="accordion-content">
     <div style="margin-top: 1rem; display: flex; flex-direction: column; gap: 1rem;">
 
       <div><strong style="color: var(--cor-terciaria);">Destaques</strong>
         <ul>
-          <li>Vista panorâmica única</li>
-          <li>Local icónico da Madeira</li>
-          <li>Perfeito para fotografias</li>
+          <li>Vista panorâmica sobre o vale</li>
+          <li>Miradouro tranquilo</li>
+          <li>Ótimo para fotografias</li>
         </ul>
       </div>
 
       <div><strong style="color: var(--cor-terciaria);">Descrição</strong>
-        <p>Um dos pontos mais visitados da ilha, ideal para quem procura natureza, paisagens e tranquilidade.</p>
+        <p>Miradouro com vista ampla sobre a Ribeira Brava e o oceano, ideal para quem gosta de paisagens naturais.</p>
       </div>
 
       <div><strong style="color: var(--cor-terciaria);">Itinerário</strong>
-        <p>Chegada ao local → Miradouro → Caminhada leve → Regresso.</p>
+        <p>Chegada → Miradouro → Fotos → Regresso.</p>
       </div>
 
       <div><strong style="color: var(--cor-terciaria);">Incluído no Serviço</strong>
         <ul>
+          <li>Transporte</li>
           <li>Guia local</li>
+        </ul>
+      </div>
+
+      <div><strong style="color: var(--cor-terciaria);">Informações</strong>
+        <ul>
+          <li>Duração: 1h</li>
+          <li>Localização: Ribeira Brava</li>
+        </ul>
+      </div>
+
+      <div><strong style="color: var(--cor-terciaria);">Outras Sugestões</strong>
+        <ul>
+          <li>Cais da Ponta do Sol</li>
+          <li>Baía de Câmara de Lobos</li>
+          <li>Paul do Mar</li>
+        </ul>
+      </div>
+
+      <div><strong style="color: var(--cor-terciaria); font-size: 1.1rem;">Preço: Gratuito</strong></div>
+
+      <div style="display: flex; gap: 1rem;">
+        <button class="botao" onclick="adicionarCarrinho('Miradouro da Ribeira Brava')">Adicionar ao Carrinho</button>
+        <button class="botao" onclick="adicionarFavoritos('Miradouro da Ribeira Brava')">Adicionar aos Favoritos</button>
+      </div>
+
+    </div>
+  </div>
+</div>
+
+
+
+
+
+    
+ <div class="card" style="border: 1px solid #ddd; border-radius: 8px; padding: 1rem; background-color: var(--cor-secundaria);">
+  <img src="caispontadosol.png" style="width: 100%; border-radius: 6px;">
+  <div class="card-title">Cais da Ponta do Sol</div>
+
+  <input type="checkbox" id="toggle-pontadosol" class="accordion-checkbox" hidden>
+  <label for="toggle-pontadosol" class="accordion-toggle">Ver detalhes</label>
+
+  <div class="accordion-content">
+    <div style="margin-top: 1rem; display: flex; flex-direction: column; gap: 1rem;">
+
+      <div><strong style="color: var(--cor-terciaria);">Destaques</strong>
+        <ul>
+          <li>Pôr do sol incrível</li>
+          <li>Zona costeira tranquila</li>
+          <li>Ambiente romântico</li>
+        </ul>
+      </div>
+
+      <div><strong style="color: var(--cor-terciaria);">Descrição</strong>
+        <p>Um dos locais mais bonitos para ver o pôr do sol na Madeira, com ambiente calmo e acolhedor.</p>
+      </div>
+
+      <div><strong style="color: var(--cor-terciaria);">Itinerário</strong>
+        <p>Chegada → Passeio pelo cais → Pôr do sol → Regresso.</p>
+      </div>
+
+      <div><strong style="color: var(--cor-terciaria);">Incluído no Serviço</strong>
+        <ul>
           <li>Transporte</li>
           <li>Seguro</li>
         </ul>
@@ -515,27 +585,23 @@ body {
       <div><strong style="color: var(--cor-terciaria);">Informações</strong>
         <ul>
           <li>Duração: 2h</li>
-          <li>Recomendado: calçado confortável</li>
-          <li>Acessível a famílias</li>
+          <li>Localização: Ponta do Sol</li>
         </ul>
       </div>
 
       <div><strong style="color: var(--cor-terciaria);">Outras Sugestões</strong>
         <ul>
-          <li>Cabo Girão</li>
-          <li>Levada 25 Fontes</li>
+          <li>Baía de Câmara de Lobos</li>
+          <li>Miradouro da Ribeira Brava</li>
+          <li>Paul do Mar</li>
         </ul>
       </div>
 
       <div><strong style="color: var(--cor-terciaria); font-size: 1.1rem;">Preço: Gratuito</strong></div>
 
       <div style="display: flex; gap: 1rem;">
-    <div style="display: flex; gap: 1rem;">
-  <button class="botao" onclick="adicionarCarrinho('Pico do Areeiro')">Adicionar ao Carrinho</button>
-  <button class="botao" onclick="adicionarFavoritos('Pico do Areeiro')">Adicionar aos Favoritos</button>
-</div>
-
-
+        <button class="botao" onclick="adicionarCarrinho('Cais da Ponta do Sol')">Adicionar ao Carrinho</button>
+        <button class="botao" onclick="adicionarFavoritos('Cais da Ponta do Sol')">Adicionar aos Favoritos</button>
       </div>
 
     </div>
@@ -544,131 +610,66 @@ body {
 
 
 
-    
-  <div class="card" style="border: 1px solid #ddd; border-radius: 8px; padding: 1rem; background-color: var(--cor-secundaria);">
-  <img src="cabogirao.png" style="width: 100%; border-radius: 6px;">
-  <div class="card-title">Cabo Girão</div>
+<div class="card" style="border: 1px solid #ddd; border-radius: 8px; padding: 1rem; background-color: var(--cor-secundaria);">
+  <img src="pauldomar.png" style="width: 100%; border-radius: 6px;">
+  <div class="card-title">Paul do Mar</div>
 
-  <input type="checkbox" id="toggle-girao" class="accordion-checkbox" hidden>
-  <label for="toggle-girao" class="accordion-toggle">Ver detalhes</label>
+  <input type="checkbox" id="toggle-pauldomar" class="accordion-checkbox" hidden>
+  <label for="toggle-pauldomar" class="accordion-toggle">Ver detalhes</label>
 
   <div class="accordion-content">
     <div style="margin-top: 1rem; display: flex; flex-direction: column; gap: 1rem;">
 
       <div><strong style="color: var(--cor-terciaria);">Destaques</strong>
         <ul>
-          <li>Plataforma suspensa em vidro</li>
-          <li>Vista sobre Funchal e mar</li>
-          <li>Adrenalina e paisagem</li>
+          <li>Vila costeira tranquila</li>
+          <li>Local popular para surf</li>
+          <li>Pôr do sol magnífico</li>
         </ul>
       </div>
 
       <div><strong style="color: var(--cor-terciaria);">Descrição</strong>
-        <p>Miradouro famoso com chão em vidro, ideal para quem gosta de emoção e vistas amplas.</p>
+        <p>Uma das zonas mais relaxantes da Madeira, perfeita para passeios à beira-mar e sunsets incríveis.</p>
       </div>
 
       <div><strong style="color: var(--cor-terciaria);">Itinerário</strong>
-        <p>Chegada → Plataforma → Tempo livre → Regresso.</p>
+        <p>Chegada → Passeio costeiro → Sunset → Regresso.</p>
       </div>
 
       <div><strong style="color: var(--cor-terciaria);">Incluído no Serviço</strong>
         <ul>
           <li>Transporte</li>
-          <li>Entrada</li>
+          <li>Seguro</li>
         </ul>
       </div>
 
       <div><strong style="color: var(--cor-terciaria);">Informações</strong>
         <ul>
-          <li>Duração: 1h30</li>
-          <li>Altura: 580m</li>
-          <li>Vista sobre falésias</li>
+          <li>Duração: 2h</li>
+          <li>Localização: Paul do Mar</li>
         </ul>
       </div>
 
       <div><strong style="color: var(--cor-terciaria);">Outras Sugestões</strong>
         <ul>
-          <li>Fajã dos Padres</li>
-          <li>Miradouro do Cabo</li>
+          <li>Cais da Ponta do Sol</li>
+          <li>Baía de Câmara de Lobos</li>
+          <li>Miradouro da Ribeira Brava</li>
         </ul>
       </div>
 
       <div><strong style="color: var(--cor-terciaria); font-size: 1.1rem;">Preço: Gratuito</strong></div>
 
       <div style="display: flex; gap: 1rem;">
-      <div style="display: flex; gap: 1rem;">
-  <button class="botao" onclick="adicionarCarrinho('Pico do Areeiro')">Adicionar ao Carrinho</button>
-  <button class="botao" onclick="adicionarFavoritos('Pico do Areeiro')">Adicionar aos Favoritos</button>
-</div>
-
-
+        <button class="botao" onclick="adicionarCarrinho('Paul do Mar')">Adicionar ao Carrinho</button>
+        <button class="botao" onclick="adicionarFavoritos('Paul do Mar')">Adicionar aos Favoritos</button>
       </div>
 
     </div>
   </div>
 </div>
-<div class="card" style="border: 1px solid #ddd; border-radius: 8px; padding: 1rem; background-color: var(--cor-secundaria);">
-  <img src="mercadolavradores.png" style="width: 100%; border-radius: 6px;">
-  <div class="card-title">Mercado dos Lavradores</div>
-
-  <input type="checkbox" id="toggle-mercado" class="accordion-checkbox" hidden>
-  <label for="toggle-mercado" class="accordion-toggle">Ver detalhes</label>
-
-  <div class="accordion-content">
-    <div style="margin-top: 1rem; display: flex; flex-direction: column; gap: 1rem;">
-
-      <div><strong style="color: var(--cor-terciaria);">Destaques</strong>
-        <ul>
-          <li>Mercado tradicional madeirense</li>
-          <li>Frutas exóticas e flores</li>
-          <li>Ambiente cultural e local</li>
-        </ul>
-      </div>
-
-      <div><strong style="color: var(--cor-terciaria);">Descrição</strong>
-        <p>Um dos locais mais emblemáticos do Funchal, perfeito para conhecer produtos regionais.</p>
-      </div>
-
-      <div><strong style="color: var(--cor-terciaria);">Itinerário</strong>
-        <p>Entrada → Zona das frutas → Zona do peixe → Artesanato.</p>
-      </div>
-
-      <div><strong style="color: var(--cor-terciaria);">Incluído no Serviço</strong>
-        <ul>
-          <li>Guia local</li>
-          <li>Degustação de frutas</li>
-        </ul>
-      </div>
-
-      <div><strong style="color: var(--cor-terciaria);">Informações</strong>
-        <ul>
-          <li>Duração: 1h</li>
-          <li>Localização: Funchal</li>
-          <li>Ideal para famílias</li>
-        </ul>
-      </div>
-
-      <div><strong style="color: var(--cor-terciaria);">Outras Sugestões</strong>
-        <ul>
-          <li>Pico Arieiro</li>
-          <li>Cabo Girão</li>
-        </ul>
-      </div>
-
-      <div><strong style="color: var(--cor-terciaria); font-size: 1.1rem;">Preço: Gratuito</strong></div>
-
-      <div style="display: flex; gap: 1rem;">
-      <div style="display: flex; gap: 1rem;">
-  <button class="botao" onclick="adicionarCarrinho('Pico do Areeiro')">Adicionar ao Carrinho</button>
-  <button class="botao" onclick="adicionarFavoritos('Pico do Areeiro')">Adicionar aos Favoritos</button>
-</div>
 
 
-      </div>
-
-    </div>
-  </div>
-</div>
 
 
   </div>
